--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -1,9 +1,9 @@
 name: Selenium Tests
 
 on:
-  workflow-dispatch:
+  workflow_dispatch:
   schedule:
-    - cron: '*/40 0,2,4,6,8,10,12,14,16,18,20,22 * * *'
+    - cron: '40 */2 * * *'
 
 jobs:
   selenium-tests:
