--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.10  # Choose the Python version you need
+        python-version: '3.10'  # Choose the Python version you need
 
     - name: Install dependencies
       run: |
