--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: Download and configure web driver (ChromeDriver in this example)
       run: |
-        wget https://chromedriver.storage.googleapis.com/$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE)/chromedriver_linux64.zip
-        unzip chromedriver_linux64.zip
+        https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/121.0.6167.85/linux64/chromedriver-linux64.zip
+        unzip chromedriver-linux64.zip
         sudo mv chromedriver /usr/local/bin/
         sudo chmod +x /usr/local/bin/chromedriver
 
