--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Download and configure web driver (ChromeDriver in this example)
       run: |
-        https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/121.0.6167.85/linux64/chromedriver-linux64.zip
+        wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/121.0.6167.85/linux64/chromedriver-linux64.zip
         unzip chromedriver-linux64.zip
         sudo mv chromedriver /usr/local/bin/
         sudo chmod +x /usr/local/bin/chromedriver
