--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/121.0.6167.85/linux64/chromedriver-linux64.zip
         unzip chromedriver-linux64.zip
-        sudo mv chromedriver /usr/local/bin/
+        sudo mv /chromedriver-linux64/chromedriver /usr/local/bin/
         sudo chmod +x /usr/local/bin/chromedriver
 
     - name: Run Selenium tests
