--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -13,6 +13,21 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Cancel Workflow Action
+      uses: styfle/cancel-workflow-action@0.12.0
+      with:
+            all_but_latest: true
+            access_token: ${{ github.token }}
+        
+    - name: Delete workflow runs
+      uses: Mattraks/delete-workflow-runs@v2
+      with:
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 0
+          keep_minimum_runs: 0
+    
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
