--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -33,6 +33,12 @@ jobs:
       with:
         python-version: '3.10'  # Choose the Python version you need
 
+
+    - uses: browser-actions/setup-chrome@v1
+      with:
+       chrome-version: '121.0.6100.0'
+
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
