--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -36,7 +36,7 @@ jobs:
 
     - uses: browser-actions/setup-chrome@v1
       with:
-       chrome-version: '121.0.6100.0'
+       chrome-version: '114'
 
 
     - name: Install dependencies
@@ -46,9 +46,9 @@ jobs:
 
     - name: Download and configure web driver (ChromeDriver in this example)
       run: |
-        wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/121.0.6167.85/linux64/chromedriver-linux64.zip
+        wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
         unzip chromedriver-linux64.zip
-        sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
+        sudo mv chromedriver /usr/local/bin/
         sudo chmod +x /usr/local/bin/chromedriver
 
     - name: Run Selenium tests
