--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Download and configure web driver (ChromeDriver in this example)
       run: |
         wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
-        unzip chromedriver-linux64.zip
+        unzip chromedriver_linux64.zip
         sudo mv chromedriver /usr/local/bin/
         sudo chmod +x /usr/local/bin/chromedriver
 
