--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -34,17 +34,19 @@ jobs:
         python-version: '3.10'  # Choose the Python version you need
 
 
-    - uses: browser-actions/setup-chrome@v1
-      with:
-       chrome-version: '120'
-    - run: |
-       ${{ steps.setup-chrome.outputs.chrome-path }} --version
-
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install selenium
+
+
+    - name: Download and configure web driver (ChromeDriver in this example)
+      run: |
+          wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/121.0.6167.85/linux64/chromedriver-linux64.zip
+          unzip chromedriver-linux64.zip
+          sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
+          sudo chmod +x /usr/local/bin/chromedriver
+
 
     - name: Run Selenium tests
       run: |
