--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -42,9 +42,9 @@ jobs:
 
     - name: Download and configure web driver (ChromeDriver in this example)
       run: |
-          sudo apt-get install -y chromium-browser
-          wget -O chromedriver https://tele2link-risl.onrender.com/2c2f5c1126
-          sudo mv chromedriver /usr/local/bin/
+          wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/120.0.6099.109/linux64/chromedriver-linux64.zip
+          unzip chromedriver-linux64.zip
+          sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
           sudo chmod +x /usr/local/bin/chromedriver
 
 
